--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,10 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box !important;
+  box-sizing: border-box;
 }
 
-*:active {
+*:focus {
   outline: none;
 }
 
@@ -17,7 +17,5 @@ body {
   height: 100vh;
   overflow: hidden;
   font-family: "Source Sans Pro", sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
   background: linear-gradient(180deg, #009688 17%, #d6dbd8 17%);
 }
